feat: add selection for stock picking
